--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20-RC2' apply false
+    id 'org.jetbrains.kotlin.kapt' version '1.4.20' apply false
 }
