--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,17 +5,22 @@ plugins {
 }
 
 android {
-    namespace 'com.northious.a2step'
+    namespace 'org.getbuddies.a2step'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.northious.a2step"
+        applicationId "org.getbuddies.a2step"
         minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
