--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".ui.AddTotpActivity"
+            android:name=".ui.totp.ScanTopVerifyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.totp.ScanTotpActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
