--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ui.totp.InputManualActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.totp.ScanTopVerifyActivity"
             android:exported="false" />
         <activity
