--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,10 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'com.leinardi.android:speed-dial:3.3.0'
+    // sardine-android
+    implementation 'com.github.thegrizzlylabs:sardine-android:0.8'
+    // work manager
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
+    // mmkv
+    implementation 'com.tencent:mmkv:1.3.0'
 }
