refactor: Migrate to viewModelScope for coroutines handling

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,10 @@ dependencies {
     // To use Kotlin Symbol Processing (KSP)
     kapt "androidx.room:room-compiler:$room_version"
 
+    // lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
+
     implementation 'com.leinardi.android:speed-dial:3.3.0'
     // sardine-android
     implementation 'com.github.thegrizzlylabs:sardine-android:0.8'
