--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.8.1"
     // mmkv
     implementation 'com.tencent:mmkv:1.3.0'
+    // androidx window
+    implementation 'androidx.window:window:1.1.0'
 }
