--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,5 @@ dependencies {
     implementation 'com.tencent:mmkv:1.3.0'
     // androidx window
     implementation 'androidx.window:window:1.1.0'
+    implementation("androidx.fragment:fragment-ktx:1.6.1")
 }
