--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".ui.settings.SettingsActivity"
+            android:name=".ui.settings.SyncSettingsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.totp.InputManualActivity"
