--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -78,4 +79,5 @@ dependencies {
     // androidx window
     implementation 'androidx.window:window:1.1.0'
     implementation("androidx.fragment:fragment-ktx:1.6.1")
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
